--- a/client/src/components/NavBar/style.css
+++ b/client/src/components/NavBar/style.css
@@ -1,5 +1,5 @@
 .navbar-light {
-  background-color:gray;
+  background-color:#e4d1ff;
   height: 34px;
   line-height: 34px;
   letter-spacing: 0.1em;
